--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <button class="btn" data-clipboard-target="#foo">
     Copy to clipboard
 </button>
+<input type="text" value="11212" id="txt">
 <!--<script src="clipboard.min.js"></script>-->
 <script>
     /*!
@@ -41,6 +42,12 @@
         console.error('Action:', e.action);
         console.error('Trigger:', e.trigger);
     });
+    document.getElementById("txt").keypress(function(e){
+  if(e.keyCode === 13) {
+    // 处理相关逻辑
+      alert("1");
+  }
+})
 </script>
 </body>
 </html>
