--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="telephone=no,email=no" name="format-detection">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>Title</title>
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 </head>
 <body>
 <input id="foo" value="https://github.com/zenorocha/clipboard.js.git">
@@ -42,7 +43,7 @@
         console.error('Action:', e.action);
         console.error('Trigger:', e.trigger);
     });
-    document.getElementById("txt").keypress(function(e){
+    $("txt").keypress(function(e){
   if(e.keyCode === 13) {
     // 处理相关逻辑
       alert("1");
