--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         console.error('Action:', e.action);
         console.error('Trigger:', e.trigger);
     });
-    $("#txt").keypress(function(e){
+    $(document).keypress(function(e){
   if(e.keyCode === 13) {
     // 处理相关逻辑
       alert("1");
