--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <button class="btn" data-clipboard-target="#foo">
     Copy to clipboard
 </button>
-<input type="text" value="11212" id="txt">
+<input type="text" value="11212111" id="txt">
 <!--<script src="clipboard.min.js"></script>-->
 <script>
     /*!
