--- a/index.html
+++ b/index.html
@@ -2,59 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no'>
     <title>Title</title>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-<video width="200px" height="150px"></video>
-<canvas width="200px" height="150px"></canvas>
-<p>
-    <button id="start">打开摄像头</button>
-    <button id="snap">截取图像</button>
-    <button id="close">关闭摄像头</button>
-</p>
+123123123123
 <script>
-    window.onload = function () {
-        var canvas = document.getElementsByTagName('canvas')[0],
-            context = canvas.getContext('2d'),
-            video = document.getElementsByTagName("video")[0],
-            snap = document.getElementById("snap"),
-            close = document.getElementById("close"),
-            start = document.getElementById("start"),
-            MediaStreamTrack;
-        start.addEventListener('click', function () {
-            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-                navigator.mediaDevices.getUserMedia({
-                    video: true,
-                    audio: true
-                }).then(function (stream) {
-                    console.log(stream);
-                    MediaStreamTrack=typeof stream.stop==='function'?stream:stream.getTracks()[1];
-                    video.src=(window.URL).createObjectURL(stream);
-                    video.play();
-                }).catch(function(err){
-                    console.log(err);
-                });
-            }else if(navigator.getMedia){
-                navigator.getMedia({
-                    video: true
-                }).then(function (stream) {
-                    console.log(stream);
-                    MediaStreamTrack=stream.getTracks()[1];
-                    video.src=(window.webkitURL).createObjectURL(stream);
-                    video.play();
-                }).catch(function(err){
-                    console.log(err);
-                });
+    $(function () {
+        $.ajax({
+            url: "https://api.talkingdata.com/metrics/app/v1",
+            data: {
+                "accesskey": "8817a4424af9c3e91fd0c55b8e05903c",
+                "metrics":["events"],
+                "groupby":"eventid",
+                "filter":{
+                    "start":"2018-09-03",
+                    "end":"2018-09-03"
+                }
+            },
+            type: "post",
+            dataType: "json",
+            contentType: "application/json",
+            cache: false,
+            success: function(message) {
+                // layer.msg("注册成功!");
+            },
+            error: function() {
+                // layer.msg("注册失败，请刷新页面重试");
             }
         });
-        snap.addEventListener('click', function () {
-            context.drawImage(video, 0, 0,200,150);
-        });
-        close.addEventListener('click', function () {
-            MediaStreamTrack && MediaStreamTrack.stop();
-        });
-    }
+        //
+    })
 </script>
 </body>
 </html>
